examples/test/testpolicy1481.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1481
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key40: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value13
          key32: value38
          key0: value18
      podSelector:
        matchLabels:
          key35: value2
